2011-10-11 Julien Nicoulaud <julien.nicoulaud@gmail.com>

	* 20111011-1 :
	Initial release of the package.
