@@ -1,24 +1,25 @@
 # Maintainer: Julien Nicoulaud <julien.nicoulaud@gmail.com>
 # Source: https://github.com/nicoulaj/archlinux-packages
 pkgname=byteman-git
-pkgver=20111011
+_pkgname=byteman
+pkgver=20120108
 pkgrel=1
 pkgdesc="Inject side effects into Java programs for the purpose of tracing and testing application behaviour."
-arch=(i686 x86_64)
+arch=(any)
 url="http://www.jboss.org/byteman"
-license=('LGPL2.1')
+license=(LGPL)
 depends=('java-environment>=6' 'bash')
-makedepends=('git' 'maven' 'unzip')
+makedepends=(git maven unzip)
+install=${pkgname}.install
 changelog=Changelog
-provides=('byteman')
-conflicts=('byteman')
+provides=(${_pkgname})
+conflicts=(${_pkgname})
 options=('!emptydirs')
 
-_gitroot=git://github.com/bytemanproject/byteman.git
-_gitname=byteman
+_gitroot=git://github.com/bytemanproject/${_pkgname}.git
+_gitname=${_pkgname}
 
 build() {
-
   msg2 "Connecting to GIT server...."
   if [ -d "${srcdir}/${_gitname}" ] ; then
     ( cd "${srcdir}/${_gitname}" && git pull origin )
@@ -31,41 +32,44 @@ build() {
   mvn --file "${srcdir}/${_gitname}/pom.xml" \
       --batch-mode \
       --update-snapshots \
-      clean install
+      clean install || return 1
+
+  msg2 "Generate scripts for /etc/profile.d..."
+  cat <<EOF > "${srcdir}"/${_pkgname}.profile.d.sh
+export BYTEMAN_HOME=/usr/share/java/${_pkgname}
+EOF
+  cat <<EOF > "${srcdir}"/${_pkgname}.profile.d.csh
+export BYTEMAN_HOME=/usr/share/java/${_pkgname}
+EOF
 }
 
 package() {
-
-  msg2 "Extracting assembly to /usr/share/java/${_gitname}..."
-  install -dm755 ${pkgdir}/usr/share/java/${_gitname}
-  unzip ${srcdir}/${_gitname}/download/target/${_gitname}-download-*-bin.zip -d ${pkgdir}/usr/share/java/${_gitname}
-  mv ${pkgdir}/usr/share/java/${_gitname}/${_gitname}-download-*/* ${pkgdir}/usr/share/java/${_gitname}/
+  msg2 "Extracting assembly to /usr/share/java/${_pkgname}..."
+  install -dm755                                                                  "${pkgdir}/usr/share/java/${_pkgname}"
+  unzip "${srcdir}"/${_gitname}/download/target/${_pkgname}-download-*-bin.zip -d "${pkgdir}/usr/share/java/${_pkgname}"
+  mv "${pkgdir}"/usr/share/java/${_pkgname}/${_pkgname}-download-*/*              "${pkgdir}/usr/share/java/${_pkgname}/"
 
   msg2 "Setting permissions..."
-  chmod -R 644 ${pkgdir}/usr/share/java/${_gitname}
-  chmod 755 ${pkgdir}/usr/share/java/${_gitname}/bin/*
+  chmod -R 644 "${pkgdir}"/usr/share/java/${_pkgname}
+  chmod 755 "${pkgdir}"/usr/share/java/${_pkgname}/bin/*
+  find "${pkgdir}/usr/share/java" -type d -exec chmod 755 {} \;
 
   msg2 "Set up the BYTEMAN_HOME environment variable in /etc/profile.d..."
-  install -dm755 ${pkgdir}/etc/profile.d/
-  cat <<EOF > ${pkgdir}/etc/profile.d/${_gitname}.sh
-export BYTEMAN_HOME=/usr/share/java/${_gitname}
-EOF
-  cat <<EOF > ${pkgdir}/etc/profile.d/${_gitname}.csh
-setenv BYTEMAN_HOME "/usr/share/java/${_gitname}"
-EOF
+  install -Dm755 "${srcdir}"/${_pkgname}.profile.d.sh  "${pkgdir}"/etc/profile.d/${_pkgname}.sh
+  install -Dm755 "${srcdir}"/${_pkgname}.profile.d.csh "${pkgdir}"/etc/profile.d/${_pkgname}.csh
 
-  msg2 "Install links to the documentation resources at /usr/share/doc/${_gitname}..."
-  install -dm755                          ${pkgdir}/usr/share/doc/${_gitname}
-  ln -s /usr/share/java/${_gitname}/README ${pkgdir}/usr/share/doc/${_gitname}/README
-  ln -s /usr/share/java/${_gitname}/docs   ${pkgdir}/usr/share/doc/${_gitname}/docs
-  ln -s /usr/share/java/${_gitname}/sample ${pkgdir}/usr/share/doc/${_gitname}/sample
+  msg2 "Install links to the documentation resources at /usr/share/doc/${_pkgname}..."
+  install -dm755                           "${pkgdir}/usr/share/doc/${_pkgname}"
+  ln -s /usr/share/java/${_pkgname}/README "${pkgdir}/usr/share/doc/${_pkgname}/README"
+  ln -s /usr/share/java/${_pkgname}/docs   "${pkgdir}/usr/share/doc/${_pkgname}/docs"
+  ln -s /usr/share/java/${_pkgname}/sample "${pkgdir}/usr/share/doc/${_pkgname}/sample"
 
   msg2 "Install links to the executables in /usr/bin..."
-  install -dm755                                    ${pkgdir}/usr/bin
-  ln -s /usr/share/java/${_gitname}/bin/bmcheck.sh   ${pkgdir}/usr/bin/bmcheck
-  ln -s /usr/share/java/${_gitname}/bin/bminstall.sh ${pkgdir}/usr/bin/bminstall
-  ln -s /usr/share/java/${_gitname}/bin/bmjava.sh    ${pkgdir}/usr/bin/bmjava
-  ln -s /usr/share/java/${_gitname}/bin/bmsubmit.sh  ${pkgdir}/usr/bin/bmsubmit
+  install -dm755                                     "${pkgdir}/usr/bin"
+  ln -s /usr/share/java/${_pkgname}/bin/bmcheck.sh   "${pkgdir}/usr/bin/bmcheck"
+  ln -s /usr/share/java/${_pkgname}/bin/bminstall.sh "${pkgdir}/usr/bin/bminstall"
+  ln -s /usr/share/java/${_pkgname}/bin/bmjava.sh    "${pkgdir}/usr/bin/bmjava"
+  ln -s /usr/share/java/${_pkgname}/bin/bmsubmit.sh  "${pkgdir}/usr/bin/bmsubmit"
 }
 
 # vim:set ts=2 sw=2 et:
