@@ -1,0 +1,12 @@
+post_install() {
+  echo "------------------------------------------------------------------------------------"
+  echo "Please issue the following command to setup the Byteman environment:"
+  echo "source /etc/profile.d/byteman.sh"
+  echo "------------------------------------------------------------------------------------"
+}
+
+post_upgrade() {
+  post_install $1
+}
+
+# vim:set ts=2 sw=2 et:
