@@ -1,3 +1,10 @@
+2012-01-08 Julien Nicoulaud <julien.nicoulaud@gmail.com>
+
+	* 20120108-1 :
+	Handle spaces in srcdir/pkgdir.
+	Extract scripts generation to build().
+	Echo usage instructions after installation.
+
 2011-10-11 Julien Nicoulaud <julien.nicoulaud@gmail.com>
 
 	* 20111011-1 :
